fixing button alignment on phones

--- a/src/components/button.scss
+++ b/src/components/button.scss
@@ -3,8 +3,8 @@ button{
     border-color: #474448;
     border-radius: 10px;
     color: #474448;
-    margin: 10px;
-    padding: 10px 20px;
+    margin: 5px;
+    padding: 10px 15px;
     text-transform: capitalize;
     font-size: 18px;
     transition: .5s all;
