--- a/src/components/container.scss
+++ b/src/components/container.scss
@@ -31,6 +31,9 @@
     }
 
     .button-container{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
       margin-top: 50px;
     }
   }
